--- a/quimica.css
+++ b/quimica.css
@@ -9,7 +9,7 @@ padding: 10px;
 font-size: 2rem;
 }
 
-.menus{
+.menu{
     background-color: aquamarine;
     display: flex;
     align-items: center;
