--- a/quimica.css
+++ b/quimica.css
@@ -21,8 +21,8 @@ header {
     width: 100%;
     background-color: var(--marinho);
     padding: 1rem;
-    position: relative;
-   
+    
+    justify-content: center;
     font-size: 2rem;
 }
 
