--- a/quimica.css
+++ b/quimica.css
@@ -20,8 +20,9 @@ header {
     display: flex;
     width: 100%;
     background-color: var(--marinho);
+    margin: auto;
     padding: 1rem;
-    
+    position: relative;
     justify-content: center;
     font-size: 2rem;
 }
