--- a/quimica.css
+++ b/quimica.css
@@ -14,6 +14,14 @@
     --branco: #FFFFFF;
     --marron-claro: #b9a183;
 }
+body {
+    height: 100vh;
+    box-sizing: border-box;
+    background-color: var(--azul-claro);
+    color: var(--amarelo-claro);
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 header {
 
