--- a/quimica.css
+++ b/quimica.css
@@ -18,7 +18,7 @@ body {
     height: 100vh;
     box-sizing: border-box;
     background-color: var(--azul-claro);
-    color: var(--amarelo-claro);
+    color: var(--roxo-claro);
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
 }
